--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         font-family: "Play", sans-serif;
       }
     </style>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
