--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
-    <title>Spices</title>
+    <title>Jute Bag</title>
   </head>
   <body>
     <div id="root"></div>
